--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "davibennun/laravel-push-notification": "dev-laravel5",
         "tymon/jwt-auth": "0.5.*",
         "barryvdh/laravel-cors": "0.7.*",
-		"sammyk/laravel-facebook-sdk": "^3.0"
+		"sammyk/laravel-facebook-sdk": "^3.0",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
