Dates helpers Trips search between dates Trips search without users

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "STS\\": "app/"
         },
         "files": [
-            "app/Helpers/Queries.php"
+            "app/Helpers/Queries.php",
+            "app/Helpers/Dates.php"
         ]
     },
     "autoload-dev": {
