--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
+APP_URL = http://www.carpoolear.com.ar
 
 DB_HOST=localhost
 DB_DATABASE=homestead
@@ -19,3 +20,10 @@ MAIL_PASSWORD=null
 
 API_PREFIX=api
 API_VERSION=v1
+
+ANDROID_ENVIRONMENT=production
+ANDROID_KEY=apikey
+IOS_CERTIFICATE=/path/to/certificate.pem
+IOS_ENVIRONMENT=production
+IOS_PASSPHRASE=password
+
