--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "Carpoolear Backend",
+    "description": "",
+    "keywords": ["carpool", "carpoolear", "sts"],
     "license": "MIT",
     "type": "project",
     "require": {
