--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Carpoolear Backend",
+    "name": "carpoolear/backend",
     "description": "",
     "keywords": ["carpool", "carpoolear", "sts"],
     "license": "MIT",
