--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sammyk/laravel-facebook-sdk": "^3.0",
         "guzzlehttp/guzzle": "^6.2",
         "doctrine/dbal": "^2.5",
-        "barryvdh/laravel-async-queue": "0.4.x"
+        "barryvdh/laravel-async-queue": "0.4.x",
+        "transbank/transbank-sdk": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
