--- a/queue-worker.conf
+++ b/queue-worker.conf
@@ -1,6 +1,6 @@
 [program:queue-worker]
 process_name = %(program_name)s_%(process_num)02d
-command=php /var/www/carpoolear/artisan queue:work  
+command=php /var/www/carpoolear/artisan queue:listen 
 autostart=true
 autorestart=true
 startsecs = 0
