--- a/000-default.conf
+++ b/000-default.conf
@@ -9,7 +9,7 @@
         #ServerName www.example.com
 
         ServerAdmin webmaster@localhost
-        Alias /firebase-messaging-sw.js /var/www/carpoolear/public/app/static/firebase-messaging-sw.js
+        # Alias /firebase-messaging-sw.js /var/www/carpoolear/public/app/static/firebase-messaging-sw.js
         DocumentRoot /var/www/carpoolear/public
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
