--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   carpoolear_db:
     image: mysql:5.6
     container_name: carpoolear_db
+    ports:
+      - 3306:3306
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_DATABASE: carpoolear
