feat: Add flag in .env.example

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,5 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
+
+MODULE_COORDINATE_BY_MESSAGE=true
