feat: Show different banner for Cordova apps

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,7 @@ MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_NO_ANALYTICS=false
 
 MODULE_COORDINATE_BY_MESSAGE=true
+BANNER_URL=https://www.carpoolear.com.ar/lucro
+BANNER_IMAGE=https://carpoolear.com.ar/img/lucro.png
+BANNER_URL_CORDOVA=https://www.carpoolear.com.ar/APP_DEBUG
+BANNER_IMAGE_CORDOVA=https://carpoolear.com.ar/img/carpoolear_pwa.png
