fix: Check for multiple trips within a time range

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,6 @@ BANNER_URL=https://www.carpoolear.com.ar/lucro
 BANNER_IMAGE=https://carpoolear.com.ar/img/lucro.png
 BANNER_URL_CORDOVA=https://www.carpoolear.com.ar/APP_DEBUG
 BANNER_IMAGE_CORDOVA=https://carpoolear.com.ar/img/carpoolear_pwa.png
+
+MODULE_USER_REQUEST_LIMITED_ENABLED=false # if enabled, the user will not be able to request a ride if there are already requests in the same trip date, FOR THE SAME DESTINATION and in the range of hours defined in MODULE_USER_REQUEST_LIMITED_HOURS_RANGE
+MODULE_USER_REQUEST_LIMITED_HOURS_RANGE=12 # 12 hours before and after the trip date
