feat: Update module flags

--- a/.env.example
+++ b/.env.example
@@ -74,5 +74,11 @@ BANNER_IMAGE=https://carpoolear.com.ar/img/lucro.png
 BANNER_URL_CORDOVA=https://www.carpoolear.com.ar/APP_DEBUG
 BANNER_IMAGE_CORDOVA=https://carpoolear.com.ar/img/carpoolear_pwa.png
 
-MODULE_USER_REQUEST_LIMITED_ENABLED=false # if enabled, the user will not be able to request a ride if there are already requests in the same trip date, FOR THE SAME DESTINATION and in the range of hours defined in MODULE_USER_REQUEST_LIMITED_HOURS_RANGE
+MODULE_USER_REQUEST_LIMITED_ENABLED=false # If enabled, the user will not be able to request a ride if there are already requests in the same trip date, FOR THE SAME DESTINATION and in the range of hours defined in MODULE_USER_REQUEST_LIMITED_HOURS_RANGE
 MODULE_USER_REQUEST_LIMITED_HOURS_RANGE=12 # 12 hours before and after the trip date
+MODULE_SEND_FULL_TRIP_MESSAGE=true # If enabled, the app will send a message to the remaining passengers when the trip is full when accepting a passenger
+MODULE_UNIQUE_DOC_PHONE=true # If enabled, it will prevent users from registering with same phone or DNI than other users
+MODULE_UNASWERED_MESSAGE_LIMIT=false # If enabled, implements a limit on unanswered messages in conversations to maintain active communication between users
+MODULE_TRIP_SEATS_PAYMENT=false # If enabled, allows users to make payments for specific seats on a trip, implementing a payment system for trip reservations
+MODULE_VALIDATED_DRIVERS=false # If enabled, users must go through a verification process before they can create trips as drivers, adding a layer of safety and trust to the platform
+MODULE_COORDINATE_BY_MESSAGE=true # Enables the ability to coordinate trip details through messages. When enabled, users can exchange specific trip coordination information through the messaging system.
