--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,5 @@ MODULE_UNASWERED_MESSAGE_LIMIT=false # If enabled, implements a limit on unanswe
 MODULE_TRIP_SEATS_PAYMENT=false # If enabled, allows users to make payments for specific seats on a trip, implementing a payment system for trip reservations
 MODULE_VALIDATED_DRIVERS=false # If enabled, users must go through a verification process before they can create trips as drivers, adding a layer of safety and trust to the platform
 MODULE_COORDINATE_BY_MESSAGE=true # Enables the ability to coordinate trip details through messages. When enabled, users can exchange specific trip coordination information through the messaging system.
+MODULE_TRIP_CREATION_PAYMENT_ENABLED=false # If enabled, the trip creator will be asked to pay a fee
+MODULE_TRIP_CREATION_PAYMENT_AMOUNT_CENTS=1500 # Amount in cents that the trip creator will have to pay if enabled
