feat: Add Mercado Pago

--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,6 @@ MODULE_VALIDATED_DRIVERS=false # If enabled, users must go through a verificatio
 MODULE_COORDINATE_BY_MESSAGE=true # Enables the ability to coordinate trip details through messages. When enabled, users can exchange specific trip coordination information through the messaging system.
 MODULE_TRIP_CREATION_PAYMENT_ENABLED=false # If enabled, the trip creator will be asked to pay a fee
 MODULE_TRIP_CREATION_PAYMENT_AMOUNT_CENTS=1500 # Amount in cents that the trip creator will have to pay if enabled
+
+MERCADO_PAGO_ACCESS_TOKEN=''
+MERCADO_PAGO_PUBLIC_KEY=''
