fix: Max price calculations

--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,10 @@ MODULE_COORDINATE_BY_MESSAGE=true # Enables the ability to coordinate trip detai
 MODULE_TRIP_CREATION_PAYMENT_ENABLED=false # If enabled, the trip creator will be asked to pay a fee
 MODULE_TRIP_CREATION_PAYMENT_AMOUNT_CENTS=1500 # Amount in cents that the trip creator will have to pay if enabled
 MODULE_MAX_PRICE_ENABLED=true # If enabled, a maximum price will be set based on the trip distance, fuel price, allowed variance, etc.
+MODULE_MAX_PRICE_FUEL_PRICE=1500
+MODULE_MAX_PRICE_PRICE_VARIANCE_TOLLS=10
+MODULE_MAX_PRICE_PRICE_VARIANCE_MAX_EXTRA=15
+MODULE_MAX_PRICE_KILOMETER_BY_LITER=10
 
 MERCADO_PAGO_ACCESS_TOKEN=''
 MERCADO_PAGO_WEBHOOK_SECRET=''
