fix: Create trip threshold for sellado

--- a/.env.example
+++ b/.env.example
@@ -84,6 +84,8 @@ MODULE_VALIDATED_DRIVERS=false # If enabled, users must go through a verificatio
 MODULE_COORDINATE_BY_MESSAGE=true # Enables the ability to coordinate trip details through messages. When enabled, users can exchange specific trip coordination information through the messaging system.
 MODULE_TRIP_CREATION_PAYMENT_ENABLED=false # If enabled, the trip creator will be asked to pay a fee
 MODULE_TRIP_CREATION_PAYMENT_AMOUNT_CENTS=1500 # Amount in cents that the trip creator will have to pay if enabled
+MODULE_TRIP_CREATION_PAYMENT_TRIPS_THRESHOLD=2 # If the user creates more than this amount, they will need to pay Sellado
+
 MODULE_MAX_PRICE_ENABLED=true # If enabled, a maximum price will be set based on the trip distance, fuel price, allowed variance, etc.
 MODULE_MAX_PRICE_FUEL_PRICE=1500
 MODULE_MAX_PRICE_PRICE_VARIANCE_TOLLS=10
