--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,8 @@ MODULE_TRIP_CREATION_PAYMENT_ENABLED=false # If enabled, the trip creator will b
 MODULE_TRIP_CREATION_PAYMENT_AMOUNT_CENTS=1500 # Amount in cents that the trip creator will have to pay if enabled
 MODULE_TRIP_CREATION_PAYMENT_TRIPS_THRESHOLD=2 # If the user creates more than this amount, they will need to pay Sellado
 
+MODULE_SEAT_PRICE_ENABLED=false # If enabled, drivers can set a price per passenger
+
 MODULE_MAX_PRICE_ENABLED=true # If enabled, a maximum price will be set based on the trip distance, fuel price, allowed variance, etc.
 MODULE_MAX_PRICE_FUEL_PRICE=1500
 MODULE_MAX_PRICE_PRICE_VARIANCE_TOLLS=10
