--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,10 @@ BANNER_URL=https://www.carpoolear.com.ar/lucro
 BANNER_IMAGE=https://carpoolear.com.ar/img/lucro.png
 BANNER_URL_CORDOVA=https://www.carpoolear.com.ar/APP_DEBUG
 BANNER_IMAGE_CORDOVA=https://carpoolear.com.ar/img/carpoolear_pwa.png
+BANNER_URL_MOBILE=https://www.carpoolear.com.ar/lucro
+BANNER_IMAGE_MOBILE=https://carpoolear.com.ar/img/lucro_mobile.png
+BANNER_URL_CORDOVA_MOBILE=https://www.carpoolear.com.ar/APP_DEBUG
+BANNER_IMAGE_CORDOVA_MOBILE=https://carpoolear.com.ar/img/carpoolear_pwa_mobile.png
 
 MODULE_USER_REQUEST_LIMITED_ENABLED=false # If enabled, the user will not be able to request a ride if there are already requests in the same trip date, FOR THE SAME DESTINATION and in the range of hours defined in MODULE_USER_REQUEST_LIMITED_HOURS_RANGE
 MODULE_USER_REQUEST_LIMITED_HOURS_RANGE=12 # 12 hours before and after the trip date
