--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
 APP_LOCALE=en
+# Available locales: en (English), arg (Argentina Spanish), chl (Chilean Spanish)
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
