fix: Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -98,5 +98,5 @@ MODULE_MAX_PRICE_PRICE_VARIANCE_TOLLS=10
 MODULE_MAX_PRICE_PRICE_VARIANCE_MAX_EXTRA=15
 MODULE_MAX_PRICE_KILOMETER_BY_LITER=10
 
-MERCADO_PAGO_ACCESS_TOKEN=''
-MERCADO_PAGO_WEBHOOK_SECRET=''
+MERCADO_PAGO_ACCESS_TOKEN='none'
+MERCADO_PAGO_WEBHOOK_SECRET='none'
