--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=arg
 # Available locales: en (English), arg (Argentina Spanish), chl (Chilean Spanish)
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
@@ -99,5 +99,31 @@ MODULE_MAX_PRICE_PRICE_VARIANCE_TOLLS=10
 MODULE_MAX_PRICE_PRICE_VARIANCE_MAX_EXTRA=15
 MODULE_MAX_PRICE_KILOMETER_BY_LITER=10
 
+# Manual identity validation cost (in cents). Set to 0 to disable.
+MANUAL_IDENTITY_VALIDATION_COST_CENTS=0
+# Identity validation: enable MP OAuth and/or manual validation (frontend shows only enabled options)
+IDENTITY_VALIDATION_MERCADO_PAGO_ENABLED=false
+IDENTITY_VALIDATION_MANUAL_ENABLED=false
+
+# Mercado Pago OAuth (for identity validation via RENAPER)
+MERCADO_PAGO_CLIENT_ID=
+MERCADO_PAGO_CLIENT_SECRET=
+MERCADO_PAGO_OAUTH_REDIRECT_URI=
+MERCADO_PAGO_OAUTH_FRONTEND_REDIRECT=
+# Set to true if "Authorization code flow with PKCE" is enabled in Application details
+MERCADO_PAGO_OAUTH_PKCE_ENABLED=false
+# If you get 400 on auth and the request goes to .com.ar, try: https://auth.mercadopago.com.ar
+# MERCADO_PAGO_OAUTH_AUTH_URL_BASE=https://auth.mercadopago.com.ar
+
+
 MERCADO_PAGO_ACCESS_TOKEN='none'
 MERCADO_PAGO_WEBHOOK_SECRET='none'
+
+SMS_PROVIDER=whatsapp
+WHATSAPP_ENABLED=true
+WHATSAPP_APP_ID=your_app_id
+WHATSAPP_APP_SECRET=your_app_secret
+WHATSAPP_ACCESS_TOKEN=your_access_token
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+WHATSAPP_GRAPH_VERSION=v19.0
+
