feat: Add QR payments with MP

--- a/.env.example
+++ b/.env.example
@@ -104,6 +104,9 @@ MANUAL_IDENTITY_VALIDATION_COST_CENTS=0
 # Identity validation: enable MP OAuth and/or manual validation (frontend shows only enabled options)
 IDENTITY_VALIDATION_MERCADO_PAGO_ENABLED=false
 IDENTITY_VALIDATION_MANUAL_ENABLED=false
+# QR payment for manual validation: set true to show "Pagar con QR". Requires MERCADO_PAGO_QR_PAYMENT_* and MERCADO_PAGO_QR_PAYMENT_POS_EXTERNAL_ID (see docs/MANUAL_VALIDATION_QR_SETUP.md).
+IDENTITY_VALIDATION_MANUAL_QR_ENABLED=false
+MERCADO_PAGO_QR_PAYMENT_POS_EXTERNAL_ID=
 
 # Mercado Pago OAuth (for identity validation via RENAPER)
 MERCADO_PAGO_CLIENT_ID=
@@ -117,6 +120,10 @@ MERCADO_PAGO_OAUTH_PKCE_ENABLED=false
 
 
 MERCADO_PAGO_ACCESS_TOKEN='none'
+# QR payment app (different MP app / account for manual validation QR orders)
+MERCADO_PAGO_QR_PAYMENT_ACCESS_TOKEN=
+MERCADO_PAGO_QR_PAYMENT_CLIENT_ID=
+MERCADO_PAGO_QR_PAYMENT_CLIENT_SECRET=
 MERCADO_PAGO_WEBHOOK_SECRET='none'
 
 SMS_PROVIDER=whatsapp
