feat: Add check for new users who don't have their profile validated yet

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=base64:s8fIxr3u2BvHDMo21mcHluh8y0znrykZ+w+0lZZNqnY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
-FRONTEND_URL="http://localhost:8080"
+FRONTEND_URL="https://carpoolear.com.ar/app"
 
 APP_LOCALE=arg
 # Available locales: en (English), arg (Argentina Spanish), chl (Chilean Spanish)
@@ -108,6 +108,10 @@ IDENTITY_VALIDATION_MANUAL_ENABLED=false
 # QR payment for manual validation: set true to show "Pagar con QR". Requires MERCADO_PAGO_QR_PAYMENT_* and MERCADO_PAGO_QR_PAYMENT_POS_EXTERNAL_ID (see docs/MANUAL_VALIDATION_QR_SETUP.md).
 IDENTITY_VALIDATION_MANUAL_QR_ENABLED=false
 MERCADO_PAGO_QR_PAYMENT_POS_EXTERNAL_ID=
+# Require identity validation for new users to send messages, request seats, accept/reject passengers, create trips
+IDENTITY_VALIDATION_REQUIRED_NEW_USERS=false
+# Users created on or after this date (Y-m-d) are "new"; if null, no one is considered new by date
+IDENTITY_VALIDATION_NEW_USERS_DATE=
 
 # Mercado Pago OAuth (for identity validation via RENAPER)
 MERCADO_PAGO_CLIENT_ID=
@@ -134,4 +138,7 @@ WHATSAPP_APP_SECRET=your_app_secret
 WHATSAPP_ACCESS_TOKEN=your_access_token
 WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
 WHATSAPP_GRAPH_VERSION=v19.0
+
+# Slack: Incoming Webhook for banned DNI alerts (posts to #carpoolear_mesa-de-ayuda). Create at https://api.slack.com/messaging/webhooks
+SLACK_BANNED_DNI_WEBHOOK_URL=
 
