feat: Add check for current users for identity validation

--- a/.env.example
+++ b/.env.example
@@ -112,6 +112,8 @@ MERCADO_PAGO_QR_PAYMENT_POS_EXTERNAL_ID=
 IDENTITY_VALIDATION_REQUIRED_NEW_USERS=false
 # Users created on or after this date (Y-m-d) are "new"; if null, no one is considered new by date
 IDENTITY_VALIDATION_NEW_USERS_DATE=
+# When set (e.g. 30), current users without validate_by_date get it set to now + N days when they hit /users/me (deadline banner in frontend)
+IDENTITY_VALIDATION_DAYS_FOR_CURRENT_USERS=
 
 # Mercado Pago OAuth (for identity validation via RENAPER)
 MERCADO_PAGO_CLIENT_ID=
