fix: .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=base64:s8fIxr3u2BvHDMo21mcHluh8y0znrykZ+w+0lZZNqnY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
-FRONTEND_URL="https://carpoolear.com.ar/app"
+FRONTEND_URL="http://localhost:8080"
 
 APP_LOCALE=arg
 # Available locales: en (English), arg (Argentina Spanish), chl (Chilean Spanish)
